fix(dashboard): #2750 remove horizontal scroll in dashboard

--- a/src/components/UserDashboard/UserDashboard.module.css
+++ b/src/components/UserDashboard/UserDashboard.module.css
@@ -1,3 +1,8 @@
+.dashboadRowContainer {
+  margin: 0 !important;
+  padding-bottom: 15px;
+}
+
 .userDashboardContainer {
   min-height: calc(100% - 56px);
   display: flex;
